<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FBCylTronicCylinder" Id="{065cd091-3563-4a4f-b586-4eea2d97404e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FBCylTronicCylinder
VAR_INPUT
	DataIn AT %I*	: CyltronicProcessDataIn;
	rSetPos			: REAL;
	rSetVelo		: REAL;
	rSetForce		: REAL;
	rSetAcc			: REAL;
	bEnable			: BOOL;
	stAxisName		: STRING;
END_VAR
VAR_OUTPUT
	DataOut AT %Q* : CyltronicProcessDataOut;
END_VAR
VAR
	ActualForce						: REAL;
	ActualPosition					: REAL;
	ActualSpeed						: REAL;
	LimitSwitchIn					: BOOL;
	LimitSwitchOut					: BOOL;
	MotionCommandCompleted			: BOOL;
	MotionModeActive				: BOOL;
	Ready							: BOOL;
	WarningActive					: BOOL;
	TrackingErrorToleranceExceeded	: BOOL;
	CylState						: REAL;
	Position_Aktiv					: BOOL;
	Sinus_Aktiv						: BOOL;
	BNP_Aktiv						: BOOL;
	Mode							: Antrieb	:= Antrieb.Off;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF NOT bEnable THEN
	DataOut.CyltronicDataOutAct.MotionMode := CyltronicMotionMode.Off;
	DataOut.CyltronicDataOutAct.TargetPosition := DataIn.CyltronicDataInAct.ActualPosition;
ELSE
	DataOut.CyltronicDataOutAct.AccelerationOverride 	:= LIMIT(1,REAL_TO_USINT(rSetAcc/MaxACC),255);
	DataOut.CyltronicDataOutAct.ForceOverride 			:= LIMIT(1,REAL_TO_USINT(rSetForce/MaxForce),255);
	DataOut.CyltronicDataOutAct.SpeedOverride 			:= LIMIT(1,REAL_TO_USINT(rSetVelo/MaxVelo),255);
	DataOut.CyltronicDataOutAct.TargetPosition			:= LIMIT(0,rSetPos,MaxTravel);
	DataOut.CyltronicDataOutAct.MotionMode				:= CyltronicMotionMode.FreePosPro;
END_IF
//Outputs

ActualForce:=DataIn.CyltronicDataInAct.ActualForce;
ActualPosition:=DataIn.CyltronicDataInAct.ActualPosition;
ActualSpeed:=DataIn.CyltronicDataInAct.ActualSpeed;
LimitSwitchIn:=DataIn.CyltronicDataInAct.LimitSwitchIn;
LimitSwitchOut:=DataIn.CyltronicDataInAct.LimitSwitchOut;
MotionCommandCompleted:=DataIn.CyltronicDataInAct.MotionCommandCompleted;
MotionModeActive:=DataIn.CyltronicDataInAct.MotionModeActive;
Ready:=DataIn.CyltronicDataInAct.Ready;
WarningActive:=DataIn.CyltronicDataInAct.WarningActive;
TrackingErrorToleranceExceeded:=DataIn.CyltronicDataInAct.TrackingErrorToleranceExceeded;
CylState:=DataIn.CyltronicDataInAct.State;]]></ST>
    </Implementation>
    <LineIds Name="FBCylTronicCylinder">
      <LineId Id="5235" Count="0" />
      <LineId Id="5432" Count="0" />
      <LineId Id="5434" Count="0" />
      <LineId Id="5436" Count="0" />
      <LineId Id="5438" Count="1" />
      <LineId Id="5441" Count="2" />
      <LineId Id="5445" Count="0" />
      <LineId Id="5435" Count="0" />
      <LineId Id="5418" Count="0" />
      <LineId Id="5431" Count="0" />
      <LineId Id="5419" Count="9" />
      <LineId Id="260" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>